// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using withBackbone Should be able to handle more than one collection at a time and trigger rerender when the collection resets 1`] = `
<div
  id="testDiv"
>
  <p
    id="A"
  >
    Tom
     - 
    developer
  </p>
  <p>
     
    Vancouver
     - 
    rainy
  </p>
  <p>
     
    Victoria
     - 
    windy
  </p>
  <p>
     
    Whistler
     - 
    SNOW!!!
  </p>
</div>
`;

exports[`When using withBackbone Should be able to handle more than one collection at a time and trigger rerender when the collection resets 2`] = `
<div
  id="testDiv"
>
  <p
    id="A"
  >
    Tom
     - 
    developer
  </p>
  <p>
     
    Vancouver
     - 
    rainy
  </p>
  <p>
     
    Victoria
     - 
    windy
  </p>
  <p>
     
    Whistler
     - 
    SNOW!!!
  </p>
  <p>
     
    Montreal
     - 
    sunny
  </p>
</div>
`;

exports[`When using withBackbone Should render match to snapshot 1`] = `
<div
  id="testDiv"
>
  <p
    id="A"
  >
    Tom
     - 
    developer
  </p>
  <p>
     
    Ford
     - 
    F150
  </p>
  <p>
     
    Jeep
     - 
    Wrangler
  </p>
  <p>
     
    Tesla
     - 
    X
  </p>
  <p>
     
    Vancouver
     - 
    rainy
  </p>
  <p>
     
    Victoria
     - 
    windy
  </p>
  <p>
     
    Whistler
     - 
    SNOW!!!
  </p>
</div>
`;
